--- a/.github/workflows/UpdateSprint.yml
+++ b/.github/workflows/UpdateSprint.yml
@@ -2,8 +2,7 @@ name: sync_subissue_sprint
 
 on:
   issues:
-    types:
-      - edited
+    types: [edited]
 
 jobs:
   sync-sprint-to-subissues:
@@ -17,10 +16,6 @@ jobs:
           org="${GITHUB_REPOSITORY%/*}"
           repo="${GITHUB_REPOSITORY#*/}"
           number="${{ github.event.issue.number }}"
-          if [[ -z "$number" || ! "$number" =~ ^[0-9]+$ ]]; then
-            echo "ERROR: Invalid issue number: $number"
-            exit 1
-          fi
           result=$(gh api graphql -H "GraphQL-Features: issue_types" -f owner="$org" -f repo="$repo" -F number="$number" -f query='
           query ($owner: String!, $repo: String!, $number: Int!) {
             repository(owner: $owner, name: $repo) {
@@ -50,42 +45,37 @@ jobs:
           PROJECT_NODE_ID="PVT_kwDODH0FwM4A3yi4"
           issue_node_id="${{ github.event.issue.node_id }}"
 
-          # Get Sprint field id (no union selection)
-          sprint_field_id=$(
-            gh api graphql -f query='
-              query($project: ID!) {
-                node(id: $project) {
-                  ... on ProjectV2 {
-                    fields(first: 50) {
-                      nodes {
-                        ... on ProjectV2IterationField {
-                          id
-                          name
-                        }
-                      }
+          fields_result=$(gh api graphql -f query='
+            query($project: ID!) {
+              node(id: $project) {
+                ... on ProjectV2 {
+                  fields(first: 50) {
+                    nodes {
+                      id
+                      name
+                      __typename
                     }
                   }
                 }
               }
-            ' -F project="$PROJECT_NODE_ID" \
-            | jq -r '.data.node.fields.nodes[] | select(.name == "Sprint") | .id // empty'
-          )
+            }
+          ' -F project="$PROJECT_NODE_ID")
 
-          # Get parent's current Sprint value (iterationId)
-          parent_sprint_id=$(
-            gh api graphql -f query='
-              query($id: ID!) {
-                node(id: $id) {
-                  ... on Issue {
-                    projectItems(first: 10) {
-                      nodes {
-                        project { id }
-                        fieldValues(first: 20) {
-                          nodes {
-                            ... on ProjectV2ItemFieldIterationValue {
-                              field { name }
-                              iterationId
-                            }
+          # Look for the field named "Sprint" with type ProjectV2IterationField
+          sprint_field_id=$(echo "$fields_result" | jq -r '.data.node.fields.nodes[] | select(.name == "Sprint" and .__typename == "ProjectV2IterationField") | .id // empty')
+
+          parent_items=$(gh api graphql -f query='
+            query($id: ID!) {
+              node(id: $id) {
+                ... on Issue {
+                  projectItems(first: 10) {
+                    nodes {
+                      project { id }
+                      fieldValues(first: 20) {
+                        nodes {
+                          ... on ProjectV2ItemFieldIterationValue {
+                            field { name }
+                            iterationId
                           }
                         }
                       }
@@ -93,9 +83,10 @@ jobs:
                   }
                 }
               }
-            ' -f id="$issue_node_id" \
-            | jq -r --arg proj "$PROJECT_NODE_ID" '.data.node.projectItems.nodes[] | select(.project.id == $proj) | .fieldValues.nodes[]? | select(.field.name == "Sprint") | .iterationId // empty'
-          )
+            }
+          ' -f id="$issue_node_id")
+
+          parent_sprint_id=$(echo "$parent_items" | jq -r --arg proj "$PROJECT_NODE_ID" '.data.node.projectItems.nodes[] | select(.project.id == $proj) | .fieldValues.nodes[]? | select(.field.name == "Sprint") | .iterationId // empty')
 
           echo "sprint_field_id=$sprint_field_id" >> $GITHUB_OUTPUT
           echo "parent_sprint_id=$parent_sprint_id" >> $GITHUB_OUTPUT
